--- a/lab1/android/res/values/strings.xml
+++ b/lab1/android/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">labball1</string>
+    <string name="app_name">gameball1</string>
 
 </resources>
